--- a/roles/cloud-ec2/files/stack.yml
+++ b/roles/cloud-ec2/files/stack.yml
@@ -19,7 +19,7 @@ Resources:
       InstanceTenancy: default
       Tags:
         - Key: Name
-          Value: Algo
+          Value: !Ref AWS::StackName
         - Key: Environment
           Value: Algo
 
@@ -36,7 +36,7 @@ Resources:
         - Key: Environment
           Value: Algo
         - Key: Name
-          Value: Algo
+          Value: !Ref AWS::StackName
 
   Subnet:
     Type: AWS::EC2::Subnet
@@ -47,7 +47,7 @@ Resources:
         - Key: Environment
           Value: Algo
         - Key: Name
-          Value: Algo
+          Value: !Ref AWS::StackName
       VpcId: !Ref VPC
 
   VPCGatewayAttachment:
@@ -64,7 +64,7 @@ Resources:
         - Key: Environment
           Value: Algo
         - Key: Name
-          Value: Algo
+          Value: !Ref AWS::StackName
 
   Route:
     Type: AWS::EC2::Route
@@ -134,7 +134,7 @@ Resources:
           CidrIp: 0.0.0.0/0
       Tags:
         - Key: Name
-          Value: Algo
+          Value: !Ref AWS::StackName
         - Key: Environment
           Value: Algo
 
@@ -189,7 +189,7 @@ Resources:
             cfn-signal -e $? --stack ${AWS::StackName} --resource EC2Instance --region ${AWS::Region}
       Tags:
         - Key: Name
-          Value: Algo
+          Value: !Ref AWS::StackName
         - Key: Environment
           Value: Algo
 
