--- a/roles/common/tasks/ubuntu.yml
+++ b/roles/common/tasks/ubuntu.yml
@@ -89,6 +89,7 @@
       - iptables-persistent
       - cgroup-tools
       - openssl
+      - resolvconf
     sysctl:
       - item: net.ipv4.ip_forward
         value: 1
