Auto create client network manager config using ansible
Uses the Network Manager CLI to create a VPN connection profile.
With this users no longer need to use the GUI to create the VPN config.

--- a/roles/client/tasks/main.yml
+++ b/roles/client/tasks/main.yml
@@ -58,3 +58,6 @@
       dest: "{{ configs_prefix }}/ipsec.d/private/{{ vpn_user }}.key"
   notify:
     - restart strongswan
+
+- name: Add network manager profile
+  command: "library/linux_nm_client_install.sh algo-{{ IP_subject_alt_name }} {{ vpn_user }} {{ IP_subject_alt_name }} {{ lookup('env','USER') }}"
