apt_repository fix

--- a/roles/wireguard/tasks/main.yml
+++ b/roles/wireguard/tasks/main.yml
@@ -3,6 +3,10 @@
   apt_repository:
     repo: ppa:wireguard/wireguard
     state: present
+  register: result
+  until: result|succeeded
+  retries: 10
+  delay: 3
 
 - name: WireGuard installed
   apt:
