--- a/roles/dns_encryption/tasks/ubuntu.yml
+++ b/roles/dns_encryption/tasks/ubuntu.yml
@@ -4,7 +4,11 @@
     state: present
     codename: artful
     repo: ppa:shevchuk/dnscrypt-proxy
-
+  register: result
+  until: result|succeeded
+  retries: 10
+  delay: 3
+  
 - name: Install dnscrypt-proxy
   apt:
     name: dnscrypt-proxy
