Run dnsmasq as the dnsmasq user
There is a task that checks whether the dnsmasq user exists.
However, dnsmasq is configured to run as user "nobody" instead.
This change lets dnsmasq run as user "dnsmasq".

--- a/roles/dns_adblocking/tasks/main.yml
+++ b/roles/dns_adblocking/tasks/main.yml
@@ -8,7 +8,7 @@
     - name: Dnsmasq installed
       package: name=dnsmasq
 
-    - name: Ensure that the dnsmasq user exist
+    - name: Ensure that the dnsmasq user exists
       user: name=dnsmasq groups=nogroup append=yes state=present
 
     - name: The dnsmasq directory created
