--- a/roles/cloud-gce/tasks/main.yml
+++ b/roles/cloud-gce/tasks/main.yml
@@ -4,8 +4,8 @@
 
     - name: Network configured
       gce_net:
-        name: "algo-net-{{ server_name }}"
-        fwname: "algo-net-{{ server_name }}-fw"
+        name: "algo-net-{{ algo_server_name }}"
+        fwname: "algo-net-{{ algo_server_name }}-fw"
         allowed: "udp:500,4500,{{ wireguard_port }};tcp:22"
         state: "present"
         mode: auto
@@ -16,7 +16,7 @@
 
     - name: "Creating a new instance..."
       gce:
-        instance_names: "{{ server_name }}"
+        instance_names: "{{ algo_server_name }}"
         zone: "{{ algo_region }}"
         machine_type: "{{ cloud_providers.gce.size }}"
         image: "{{ cloud_providers.gce.image }}"
@@ -24,7 +24,7 @@
         credentials_file: "{{ credentials_file_path }}"
         project_id: "{{ project_id }}"
         metadata: '{"ssh-keys":"ubuntu:{{ ssh_public_key_lookup }}"}'
-        network: "algo-net-{{ server_name }}"
+        network: "algo-net-{{ algo_server_name }}"
         tags:
           - "environment-algo"
       register: google_vm
