There is an issue with Google Cloud Engine's build of Ubuntu 18.04 and the creation of the a Private Key using OpenSSL Rand. The errors reads that a Non-Zero return was coming back from the shell under Ansible 2.5.1. This however doesn't mean that there was an error, just that the shell returned a return code of :1 (or true). Ignorning errors seemed to be the guidance from the ansible individuals that was asked

--- a/playbooks/facts/main.yml
+++ b/playbooks/facts/main.yml
@@ -24,6 +24,7 @@
     module: shell
       openssl rand -hex 16
   become: no
+  ignore_errors: yes
   register: CA_password
 
 - name: Generate p12 export password
