--- a/roles/wireguard/tasks/keys.yml
+++ b/roles/wireguard/tasks/keys.yml
@@ -3,7 +3,7 @@
   file:
     dest: "/etc/wireguard/private_{{ item }}.lock"
     state: absent
-  when: easyrsa_reinit_existent|bool == True
+  when: keys_clean_all|bool == True
   with_items:
     - "{{ users }}"
     - "{{ IP_subject_alt_name }}"
@@ -13,7 +13,6 @@
   register: wg_genkey
   args:
     creates: "/etc/wireguard/private_{{ item }}.lock"
-    executable: bash
   with_items:
     - "{{ users }}"
     - "{{ IP_subject_alt_name }}"
