--- a/config.cfg
+++ b/config.cfg
@@ -10,8 +10,8 @@ users:
 
 ### Advanced users only below this line ###
 
-# If True re-init all existing certificates. (True or False)
-easyrsa_reinit_existent: False
+# If True re-init all existing certificates. Boolean
+keys_clean_all: False
 
 vpn_network: 10.19.48.0/24
 vpn_network_ipv6: 'fd9d:bc11:4020::/48'
@@ -27,9 +27,6 @@ wireguard_port: 51820
 # - https://github.com/trailofbits/algo/issues?utf8=%E2%9C%93&q=is%3Aissue%20mtu
 # - https://serverfault.com/questions/601143/ssh-not-working-over-ipsec-tunnel-strongswan
 #max_mss: 1316
-
-server_name: "{{ ansible_ssh_host }}"
-IP_subject_alt_name: "{{ ansible_ssh_host }}"
 
 # StrongSwan log level
 # https://wiki.strongswan.org/projects/strongswan/wiki/LoggerConfiguration
@@ -64,7 +61,7 @@ VPN_PayloadIdentifier: "{{ 800000 | random | to_uuid | upper }}"
 CA_PayloadIdentifier: "{{ 700000 | random | to_uuid | upper }}"
 
 # Block traffic between connected clients
-BetweenClients_DROP: Y
+BetweenClients_DROP: true
 
 congrats:
   common: |
@@ -75,9 +72,9 @@ congrats:
     "#        and ensure that all your traffic passes through the VPN.      #"
     "#               Local DNS resolver {{ local_service_ip }}              #"
   p12_pass: |
-    "#                The p12 and SSH keys password for new users is {{ easyrsa_p12_export_password }}             #"
+    "#                The p12 and SSH keys password for new users is {{ p12_export_password }}             #"
   ca_key_pass: |
-    "#                  The CA key password is {{ easyrsa_CA_password }}                 #"
+    "#                  The CA key password is {{ CA_password }}                 #"
   ssh_access: |
     "#      Shell access: ssh -i {{ ansible_ssh_private_key_file|default(omit) }} {{ ansible_ssh_user|default(omit) }}@{{ ansible_ssh_host|default(omit) }}        #"
 
@@ -98,6 +95,7 @@ cloud_providers:
     size: s-1vcpu-1gb
     image: "ubuntu-18-04-x64"
   ec2:
+    encrypted: false
     size: t2.micro
     image:
       name: "ubuntu-bionic-18.04"
@@ -115,9 +113,16 @@ cloud_providers:
   openstack:
     flavor_ram: ">=512"
     image:  Ubuntu-18.04
+  vultr:
+    os: Ubuntu 18.04 x64
+    size: 1024 MB RAM,25 GB SSD,1.00 TB BW
   local:
 
 fail_hint:
   - Sorry, but something went wrong!
   - Please check the troubleshooting guide.
   - https://trailofbits.github.io/algo/troubleshooting.html
+
+booleans_map:
+  Y: true
+  y: true
