Scaleway authentication fix

--- a/roles/cloud-scaleway/tasks/main.yml
+++ b/roles/cloud-scaleway/tasks/main.yml
@@ -54,7 +54,7 @@
         method: GET
         headers:
           Content-Type: 'application/json'
-          X-Auth-Token: "{{ scaleway_auth_token }}"
+          X-Auth-Token: "{{ algo_scaleway_token }}"
         status_code: 200
       register: scaleway_images
       with_sequence: start=1 end={{ ((scaleway_pages.x_total_count|int / 100)| round )|int }}
