invoke dns encryption from main playbook instead of meta-dependencies

--- a/server.yml
+++ b/server.yml
@@ -9,6 +9,9 @@
 
   roles:
     - role: common
+    - role: dns_encryption
+      when: dns_encryption
+      tags: dns_encryption
     - role: dns_adblocking
       when: algo_local_dns
       tags: dns_adblocking
