Move to the ARM deployment schema

--- a/config.cfg
+++ b/config.cfg
@@ -95,11 +95,7 @@ SSH_keys:
 cloud_providers:
   azure:
     size: Basic_A0
-    image:
-      offer: UbuntuServer
-      publisher: Canonical
-      sku: '18.04-LTS'
-      version: latest
+    image: 18.04-LTS
   digitalocean:
     size: s-1vcpu-1gb
     image: "ubuntu-18-04-x64"
