--- a/config.cfg
+++ b/config.cfg
@@ -81,7 +81,7 @@ congrats:
     "#        and ensure that all your traffic passes through the VPN.      #"
     "#                     Local DNS resolver {{ local_service_ip }}                    #"
   p12_pass: |
-    "#        The p12 and SSH keys password for new users is {{ p12_export_password }}       #"
+    "#    The p12 and SSH keys password for all regular users is {{ p12_export_password }}    #"
   ca_key_pass: |
     "#        The CA key password is {{ CA_password }}       #"    
   ssh_access: |
