Allow more flexible DNSCrypt configuration

--- a/config.cfg
+++ b/config.cfg
@@ -38,13 +38,25 @@ adblock_lists:
  - "https://www.malwaredomainlist.com/hostslist/hosts.txt"
  - "https://hosts-file.net/ad_servers.txt"
 
-# Enable DNS encryption. Use dns_encryption_provider to specify the provider. If false dns_servers should be specified
+# Enable DNS encryption.
+# If 'false', 'dns_servers' should be specified below.
 dns_encryption: true
 
-# Possible values: google, cloudflare
-dns_encryption_provider: cloudflare
+# DNS servers which will be used if 'dns_encryption' is 'true'. Multiple
+# providers may be specified, but avoid mixing providers that filter results
+# (like Cisco) with those that don't (like Cloudflare) or you could get
+# inconsistent results. The list of available public providers can be found
+# here:
+# https://github.com/DNSCrypt/dnscrypt-resolvers/blob/master/v2/public-resolvers.md
+dnscrypt_servers:
+  ipv4:
+    - cloudflare
+#   - google
+  ipv6:
+    - cloudflare-ipv6
 
-# DNS servers which will be used if dns_encryption disabled
+# DNS servers which will be used if 'dns_encryption' is 'false'.
+# The default is to use Cloudflare.
 dns_servers:
   ipv4:
     - 1.1.1.1
