GCE: Static external ip (optional)

--- a/config.cfg
+++ b/config.cfg
@@ -83,7 +83,7 @@ congrats:
   p12_pass: |
     "#        The p12 and SSH keys password for new users is {{ p12_export_password }}       #"
   ca_key_pass: |
-    "#        The CA key password is {{ CA_password }}       #"    
+    "#        The CA key password is {{ CA_password }}       #"
   ssh_access: |
     "#      Shell access: ssh -i {{ ansible_ssh_private_key_file|default(omit) }} {{ ansible_ssh_user|default(omit) }}@{{ ansible_ssh_host|default(omit) }}        #"
 
@@ -101,9 +101,9 @@ cloud_providers:
     image: "ubuntu-18-04-x64"
   # Change the encrypted flag to "true" to enable AWS volume encryption, for encryption of data at rest.
   # Warning: the Algo script will take approximately 6 minutes longer to complete.
-  # Also note that the documented AWS minimum permissions aren't sufficient. 
-  # You will have to edit the AWS user policy documented at 
-  # https://github.com/trailofbits/algo/blob/master/docs/cloud-amazon-ec2.md to also allow "ec2:CopyImage". 
+  # Also note that the documented AWS minimum permissions aren't sufficient.
+  # You will have to edit the AWS user policy documented at
+  # https://github.com/trailofbits/algo/blob/master/docs/cloud-amazon-ec2.md to also allow "ec2:CopyImage".
   # See https://docs.aws.amazon.com/IAM/latest/UserGuide/access_policies_manage-edit.html
   ec2:
     encrypted: false
@@ -114,6 +114,7 @@ cloud_providers:
   gce:
     size: f1-micro
     image: ubuntu-1804
+    external_static_ip: false
   lightsail:
     size: nano_1_0
     image: ubuntu_16_04
