--- a/roles/wireguard/tasks/main.yml
+++ b/roles/wireguard/tasks/main.yml
@@ -52,6 +52,9 @@
   with_indexed_items: "{{ users }}"
   delegate_to: localhost
   become: false
+  tags: update-users
+  vars:
+    ansible_python_interpreter: "{{ ansible_playbook_python }}"
   args:
     chdir: "{{ wireguard_config_path }}"
     executable: bash
