allow setting a floating ip in config when using digitalocean

--- a/config.cfg
+++ b/config.cfg
@@ -108,9 +108,12 @@ cloud_providers:
   azure:
     size: Basic_A0
     image: 18.04-LTS
+  # To use floating_ip, first allocate a floating IP via Digital Ocean, and
+  # then set floating_ip to the IP address that was allocated.
   digitalocean:
     size: s-1vcpu-1gb
     image: "ubuntu-18-04-x64"
+    floating_ip: false
   # Change the encrypted flag to "true" to enable AWS volume encryption, for encryption of data at rest.
   # Warning: the Algo script will take approximately 6 minutes longer to complete.
   # Also note that the documented AWS minimum permissions aren't sufficient.
