--- a/roles/cloud-lightsail/tasks/prompts.yml
+++ b/roles/cloud-lightsail/tasks/prompts.yml
@@ -27,6 +27,7 @@
     lightsail_region_facts:
       aws_access_key: "{{ access_key }}"
       aws_secret_key: "{{ secret_key }}"
+      region: us-east-1
     register: _lightsail_regions
 
   - name: Set facts about thre regions
