--- a/roles/wireguard/tasks/main.yml
+++ b/roles/wireguard/tasks/main.yml
@@ -7,7 +7,6 @@
   with_items:
     - private
     - public
-    - ip
   delegate_to: localhost
   become: false
 
@@ -25,50 +24,57 @@
   import_tasks: keys.yml
   tags: update-users
 
-- name: Dump IP addresses
-  copy:
-    dest: "{{ wireguard_config_path }}/ip/{{ item.1 }}"
-    content: "{{ wireguard_client_ip }}"
-    force: false
-  with_indexed_items: "{{ users }}"
-  tags: update-users
-  become: false
-  delegate_to: localhost
+- block:
+  - block:
+    - name: WireGuard user list updated
+      lineinfile:
+        dest: "{{ wireguard_config_path }}/index.txt"
+        create: true
+        mode: "0600"
+        insertafter: EOF
+        line: "{{ item }}"
+      register: lineinfile
+      with_items: "{{ users }}"
 
-- name: WireGuard configured
-  template:
-    src: server.conf.j2
-    dest: "{{ config_prefix|default('/') }}etc/wireguard/{{ wireguard_interface }}.conf"
-    mode: "0600"
-  notify: restart wireguard
+    - set_fact:
+        wireguard_users: "{{ (lookup('file', wireguard_config_path + 'index.txt')).split('\n') }}"
+
+    - name: WireGuard users config generated
+      template:
+        src: client.conf.j2
+        dest: "{{ wireguard_config_path }}/{{ item.1 }}.conf"
+        mode: "0600"
+      with_indexed_items:  "{{ wireguard_users }}"
+      when: item.1 in users
+      vars:
+        index: "{{ item.0 }}"
+
+    - name: Generate QR codes
+      shell: >
+        umask 077;
+        which segno &&
+        segno --scale=5 --output={{ item.1 }}.png \
+          "{{ lookup('template', 'client.conf.j2') }}" || true
+      changed_when: false
+      with_indexed_items:  "{{ wireguard_users }}"
+      when: item.1 in users
+      vars:
+        index: "{{ item.0 }}"
+        ansible_python_interpreter: "{{ ansible_playbook_python }}"
+      args:
+        chdir: "{{ wireguard_config_path }}"
+        executable: bash
+    become: false
+    delegate_to: localhost
+
+  - name: WireGuard configured
+    template:
+      src: server.conf.j2
+      dest: "{{ config_prefix|default('/') }}etc/wireguard/{{ wireguard_interface }}.conf"
+      mode: "0600"
+    notify: restart wireguard
   tags: update-users
 
-- name: WireGuard users config generated
-  template:
-    src: client.conf.j2
-    dest: "{{ wireguard_config_path }}/{{ item.1 }}.conf"
-    mode: "0600"
-  with_indexed_items: "{{ users }}"
-  become: false
-  tags: update-users
-  delegate_to: localhost
-
-- name: Generate QR codes
-  shell: >
-    umask 077;
-    which segno &&
-    segno --scale=5 --output={{ item.1 }}.png \
-      "{{ lookup('template', 'client.conf.j2') }}" || true
-  changed_when: false
-  with_indexed_items: "{{ users }}"
-  delegate_to: localhost
-  become: false
-  tags: update-users
-  vars:
-    ansible_python_interpreter: "{{ ansible_playbook_python }}"
-  args:
-    chdir: "{{ wireguard_config_path }}"
-    executable: bash
 
 - name: WireGuard enabled and started
   service:
