--- a/roles/cloud-lightsail/tasks/prompts.yml
+++ b/roles/cloud-lightsail/tasks/prompts.yml
@@ -30,7 +30,7 @@
       region: us-east-1
     register: _lightsail_regions
 
-  - name: Set facts about thre regions
+  - name: Set facts about the regions
     set_fact:
       lightsail_regions: "{{ _lightsail_regions.results.regions | sort(attribute='name') }}"
 
