Add info about modifying blacklists
# Algo will use the following lists to block ads. You can add new block lists 
# after deployment by modifying the line starting "BLOCKLIST_URLS=" at:
# /usr/local/sbin/adblock.sh 
# If you load very large blocklists, you may also have to modify resource limits:
# /etc/systemd/system/dnsmasq.service.d/100-CustomLimitations.conf

--- a/config.cfg
+++ b/config.cfg
@@ -35,6 +35,11 @@ wireguard_port: 51820
 # https://wiki.strongswan.org/projects/strongswan/wiki/LoggerConfiguration
 strongswan_log_level: 2
 
+# Algo will use the following lists to block ads. You can add new block lists 
+# after deployment by modifying the line starting "BLOCKLIST_URLS=" at:
+# /usr/local/sbin/adblock.sh 
+# If you load very large blocklists, you may also have to modify resource limits:
+# /etc/systemd/system/dnsmasq.service.d/100-CustomLimitations.conf
 adblock_lists:
  - "http://winhelp2002.mvps.org/hosts.txt"
  - "https://adaway.org/hosts.txt"
