Note that WireGuard configs cannot be shared

--- a/config.cfg
+++ b/config.cfg
@@ -1,7 +1,10 @@
 ---
 
-# Add as many users as you want for your VPN server here.
-# Credentials will be generated for each one.
+# Add up to 250 users here.
+# For each user, configuration files will be generated for both an IPsec
+# connection and a WireGuard connection. Multiple client devices can share an
+# IPsec configuration but WireGuard clients must each use a unique
+# WireGuard configuration.
 users:
   - dan
   - jack
