Backport ec2_eip_facts module for EIP support
This means that EIP support no longer requires Ansible 2.6
The local fact module has been named ec2_elasticip_facts
to avoid conflict with the ec2_eip_facts module whenever
the Ansible 2.6 upgrade takes place.

Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/roles/cloud-ec2/tasks/prompts.yml
+++ b/roles/cloud-ec2/tasks/prompts.yml
@@ -56,7 +56,7 @@
 
 - block:
   - name: Get existing available Elastic IPs
-    ec2_eip_facts:
+    ec2_elasticip_facts:
     register: raw_eip_addresses
 
   - set_fact:
