Add monitoring tag
Monitoring is disabled by default. It can be enabled by either setting

    monitoring_enabled: true

in config.cfg or by running

    ./algo -e monitoring_enabled`

--- a/config.cfg
+++ b/config.cfg
@@ -78,6 +78,16 @@ dns_servers:
 # IP address for the local dns resolver
 local_service_ip: 172.16.0.1
 
+# Enable system monitoring.
+monitoring_enabled: false
+
+# If monitoring is enabled go-audit will be installed. Currently, no official
+# go-audit package exists and the tool must either be compiled from source or
+# pre-built binaries must be used. Set the following option to 'true' to
+# compile go-audit from source on the target host or 'false' to use the
+# pre-build binary located in the go_audit role's files/ directory.
+go_audit_build: false
+
 # Your Algo server will automatically install security updates. Some updates
 # require a reboot to take effect but your Algo server will not reboot itself
 # automatically unless you change 'enabled' below from 'false' to 'true', in
