clarify user list

--- a/config.cfg
+++ b/config.cfg
@@ -1,15 +1,14 @@
 ---
 
-# Add up to 250 users here.
-# For each user, configuration files will be generated for both an IPsec
-# connection and a WireGuard connection. Multiple client devices can share an
-# IPsec configuration but WireGuard clients must each use a unique
-# WireGuard configuration.
+# This is the list of user to generate.
+# Every device must have a unique username.
+# You can generate up to 250 users at one time.
 users:
-  - dan
-  - jack
+  - phone
+  - laptop
+  - desktop
 
-# NOTE: If your usernames have leading 0's, like "000dan", you have to escape them
+# NOTE: You must "escape" any usernames with leading 0's, like "000dan"
 
 ### Advanced users only below this line ###
 
