Modify naming in the cloud resources and client config files

--- a/roles/cloud-azure/tasks/main.yml
+++ b/roles/cloud-azure/tasks/main.yml
@@ -16,13 +16,13 @@
       - name: Create AlgoVPN Server
         azure_rm_deployment:
           state: present
-          deployment_name: "AlgoVPN-{{ algo_server_name }}"
+          deployment_name: "{{ algo_server_name }}"
           template: "{{ lookup('file', 'deployment.json') }}"
           secret: "{{ secret }}"
           tenant: "{{ tenant }}"
           client_id: "{{ client_id }}"
           subscription_id: "{{ subscription_id }}"
-          resource_group_name: "AlgoVPN-{{ algo_server_name }}"
+          resource_group_name: "{{ algo_server_name }}"
           parameters:
             AlgoServerName:
               value: "{{ algo_server_name }}"
