--- a/roles/local/tasks/prompts.yml
+++ b/roles/local/tasks/prompts.yml
@@ -13,21 +13,22 @@
       {%- elif _algo_server.user_input %}{{ _algo_server.user_input }}
       {%- else %}localhost{% endif %}
 
-- pause:
-    prompt: |
-      What user should we use to login on the server? (note: passwordless login required, or ignore if you're deploying to localhost)
-      [root]
-  register: _algo_ssh_user
+- block:
+  - pause:
+      prompt: |
+        What user should we use to login on the server? (note: passwordless login required, or ignore if you're deploying to localhost)
+        [root]
+    register: _algo_ssh_user
+
+  - name: Set the facts
+    set_fact:
+      ansible_ssh_user: >-
+        {% if ssh_user is defined %}{{ ssh_user }}
+        {%- elif _algo_ssh_user.user_input %}{{ _algo_ssh_user.user_input }}
+        {%- else %}root{% endif %}
   when:
     - ssh_user is undefined
     - cloud_instance_ip != "localhost"
-
-- name: Set the facts
-  set_fact:
-    ansible_ssh_user: >-
-      {% if ssh_user is defined %}{{ ssh_user }}
-      {%- elif _algo_ssh_user.user_input %}{{ _algo_ssh_user.user_input }}
-      {%- else %}root{% endif %}
 
 - pause:
     prompt: |
