--- a/roles/cloud-cloudstack/tasks/prompts.yml
+++ b/roles/cloud-cloudstack/tasks/prompts.yml
@@ -1,21 +1,15 @@
 ---
 - block:
-  - set_fact:
-      _cs_config: "{{ lookup('env', 'CLOUDSTACK_CONFIG') }}"
-
   - pause:
       prompt: |
         Enter path for cloudstack.ini file
         [~/.cloudstack.ini]
     register: _cs_config_input
-    when: _cs_config == ""
+    when:
+      - lookup('env', 'CLOUDSTACK_CONFIG') | length <= 0
 
   - set_fact:
-      _cs_config_input: "{% if _cs_config_input.user_input == ''%}{{ '~/.cloudstack.ini' }}{% else %}{{ _cs_config_input.user_input }}{% endif %}"
-    when: _cs_config == ""
-
-  - set_fact:
-      _cs_config: "{% if _cs_config == '' %}{{ _cs_config_input }}{% else %}{{ _cs_config }}{% endif %}"
+      _cs_config: "{{ _cs_config_input.user_input | default(lookup('env', 'CLOUDSTACK_CONFIG'), true) | default('~/.cloudstack.ini') }}"
 
   - pause:
       prompt: |
@@ -26,7 +20,7 @@
   - name: Parse zones from output
     set_fact:
       _cs_zones: "{{ _cloudstack_zones | from_json }}"
-  
+
   - name: Extract zones from output
     set_fact:
       cs_zones: "{{ _cs_zones | sort(attribute='name') }}"
