--- a/config.cfg
+++ b/config.cfg
@@ -8,7 +8,7 @@ users:
   - laptop
   - desktop
 
-# NOTE: You must "escape" any usernames with leading 0's, like "000dan"
+# NOTE: You must "escape" any usernames with leading 0's or containing only numbers, like "000dan" or "123"
 
 ### Advanced users only below this line ###
 
