--- a/config.cfg
+++ b/config.cfg
@@ -3,13 +3,11 @@
 # This is the list of users to generate.
 # Every device must have a unique username.
 # You can generate up to 250 users at one time.
-# Non-standard names should be escaped in double quotes, e.g. "1".
+# Usernames with leading 0's or containing only numbers should be escaped in double quotes, e.g. "000dan" or "123".
 users:
   - phone
   - laptop
   - desktop
-
-# NOTE: You must "escape" any usernames with leading 0's or containing only numbers, like "000dan" or "123"
 
 ### Advanced users only below this line ###
 
