EC2 eip facts authentication fix

--- a/roles/cloud-ec2/tasks/prompts.yml
+++ b/roles/cloud-ec2/tasks/prompts.yml
@@ -57,6 +57,8 @@
 - block:
   - name: Get existing available Elastic IPs
     ec2_eip_facts:
+      aws_access_key: "{{ access_key }}"
+      aws_secret_key: "{{ secret_key }}"
     register: raw_eip_addresses
 
   - set_fact:
