--- a/config.cfg
+++ b/config.cfg
@@ -62,6 +62,7 @@ adblock_lists:
 
 # Enable DNS encryption.
 # If 'false', 'dns_servers' should be specified below.
+# DNS encryption can not be disabled if DNS adblocking is enabled
 dns_encryption: true
 
 # DNS servers which will be used if 'dns_encryption' is 'true'. Multiple
@@ -125,7 +126,7 @@ SSH_keys:
 
 cloud_providers:
   azure:
-    size: Basic_A0
+    size: Standard_B1S
     image: 19.04
   digitalocean:
     size: s-1vcpu-1gb
