--- a/config.cfg
+++ b/config.cfg
@@ -62,6 +62,7 @@ adblock_lists:
 
 # Enable DNS encryption.
 # If 'false', 'dns_servers' should be specified below.
+# DNS encryption can not be disabled if DNS adblocking is enabled
 dns_encryption: true
 
 # DNS servers which will be used if 'dns_encryption' is 'true'. Multiple
