standalone cloudstack zones module

--- a/roles/cloud-cloudstack/tasks/prompts.yml
+++ b/roles/cloud-cloudstack/tasks/prompts.yml
@@ -17,13 +17,17 @@
         [exoscale]
     register: _cs_region
 
-  - name: Parse zones from output
-    set_fact:
-      _cs_zones: "{{ _cloudstack_zones | from_json }}"
+  # - name: Parse zones from output
+  #   set_fact:
+  #     _cs_zones: "{{ _cloudstack_zones | from_json }}"
+
+  - name: Get zones on cloud
+    cloudstack_zones:
+    register: _cs_zones
 
   - name: Extract zones from output
     set_fact:
-      cs_zones: "{{ _cs_zones | sort(attribute='name') }}"
+      cs_zones: "{{ _cs_zones['zone'] | sort(attribute='name') }}"
 
   - name: Set the default zone
     set_fact:
